# BuildSummerization

./: Dockerfile  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: main_azfuncappsummerization.yml  main_funcappforbuildnsummary22jan.yml  main_funcbuildnsummary.yml  main_wabuidnsummarylatest.yml
summarization/: app.py  auth.py  config.py  constants.ini  model_classes.py  platform_config.py  utils.py
summarization/dataprocessing/: bart_summary.py  chunking.py  data_cleansing.py  summary.py
summarization/integrations/openai/: openai_integration.py
summarization/integrations/watsonx/: bam_integration.py  dataplatform_integration.py  params.ini  prompt_builder.py  prompts.ini
